--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "play-audio-once",
-	"version": "1.1.0",
-	"description": "",
+	"version": "1.1.1",
+	"description": "Adds an option to the audio block to prevent the file from being played multiple times.",
 	"author": "threadi",
 	"license": "GPL-2.0-or-later",
 	"main": "attributes/index.js",
