--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "threadi/play-audio-once",
+    "version": "1.1.5",
     "require-dev": {
         "wp-coding-standards/wpcs": "^3.0.0"
     },
