--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,16 @@
 {
     "name": "threadi/play-audio-once",
-    "version": "2.0.0",
+    "version": "3.0.0",
     "scripts": {
         "post-install-cmd": [
-            "\"vendor/bin/phpcs\" --config-set installed_paths vendor/wp-coding-standards/wpcs,vendor/phpcsstandards/phpcsutils,vendor/phpcsstandards/phpcsextra,vendor/sirbrillig/phpcs-variable-analysis,vendor/automattic/vipwpcs"
+            "\"vendor/bin/phpcs\" --config-set installed_paths vendor/wp-coding-standards/wpcs,vendor/phpcsstandards/phpcsutils,vendor/phpcsstandards/phpcsextra,vendor/sirbrillig/phpcs-variable-analysis,vendor/automattic/vipwpcs",
+            "\"vendor/bin/mozart\" compose",
+            "composer dump-autoload"
         ],
         "post-update-cmd": [
-            "\"vendor/bin/phpcs\" --config-set installed_paths vendor/wp-coding-standards/wpcs,vendor/phpcsstandards/phpcsutils,vendor/phpcsstandards/phpcsextra,vendor/sirbrillig/phpcs-variable-analysis,vendor/automattic/vipwpcs"
+            "\"vendor/bin/phpcs\" --config-set installed_paths vendor/wp-coding-standards/wpcs,vendor/phpcsstandards/phpcsutils,vendor/phpcsstandards/phpcsextra,vendor/sirbrillig/phpcs-variable-analysis,vendor/automattic/vipwpcs",
+            "\"vendor/bin/mozart\" compose",
+            "composer dump-autoload"
         ]
     },
     "config": {
@@ -19,17 +23,31 @@
         "prepend-autoloader": false,
         "platform-check": false
     },
+    "extra": {
+        "mozart": {
+            "dep_namespace": "PlayAudioOnce\\Dependencies\\",
+            "dep_directory": "/app/Dependencies/",
+            "classmap_directory": "/libs/classes/dependencies/",
+            "classmap_prefix": "PlayAudioOnce",
+            "packages": [
+                "threadi/easy-settings-for-wordpress",
+                "threadi/easy-dialog-for-wordpress"
+            ]
+        }
+    },
     "autoload": {
         "psr-4": {
             "PlayAudioOnce\\": "app/"
         }
     },
     "require": {
-        "php": "^8.0"
+        "php": "^8.0",
+        "threadi/easy-settings-for-wordpress": "^1.1.0"
     },
     "require-dev": {
         "wp-coding-standards/wpcs": "^3.1.0",
         "pronamic/wp-documentor": "^1.3.2",
-        "automattic/vipwpcs": "^3.0"
+        "automattic/vipwpcs": "^3.0",
+        "coenjacobs/mozart": "^0.7.1"
     }
 }
