--- a/.github/workflows/build-zip.yml
+++ b/.github/workflows/build-zip.yml
@@ -28,10 +28,11 @@ jobs:
         run: composer dump-autoload -oa --no-dev
 
       - name: Run WordPress Coding Standard fixes
-        run: vendor/bin/phpcbf --extensions=php --ignore=*/vendor/*,*/attributes/*,*/node_modules/*,*/svn/*,*/releases/* --standard=ruleset.xml .
+        run: vendor/bin/phpcbf --extensions=php --ignore=*/vendor/*,*/attributes/*,*/node_modules/*,*/svn/*,*/releases/*,*/app/Dependencies/* --standard=ruleset.xml .
+        continue-on-error: true
 
       - name: Run WordPress Coding Standard checks
-        run: vendor/bin/phpcs --extensions=php --ignore=*/vendor/*,*/attributes/*,*/node_modules/*,*/svn/*,*/releases/* --standard=ruleset.xml .
+        run: vendor/bin/phpcs --extensions=php --ignore=*/vendor/*,*/attributes/*,*/node_modules/*,*/svn/*,*/releases/*,*/app/Dependencies/* --standard=ruleset.xml .
 
       - name: Set version number
         uses: richardrigutins/replace-in-files@v2
